samples/_failures_safe/1761397744_ea7deb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_adc14a60.c: In function ‘print_errors’:
./samples/SAFE/__tmp_adc14a60.c:133:5: error: expected identifier at end of input
  133 |     for (uint32_t i = 0; i < analyzer->
      |     ^~~
./samples/SAFE/__tmp_adc14a60.c:133:5: error: expected declaration or statement at end of input
